--- a/bio.html
+++ b/bio.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+
+<body style="background-color: #612940;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid d-flex justify-content-between">
       <div>
-      <a class="navbar-brand" href="photography.html"><h2 class="mt-1"id="logo">CandyKao Photography</h1></a>
+      <a class="navbar-brand" href="photography.html"><h2 class="mt-1" id="logo">CandyKao Photography</h1></a>
       </div>
       <div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,11 +48,26 @@
       </div>
     </div>
   </nav>
-
-  <div class="banner" style="background-image: linear-gradient(90deg, rgba(100,100,100,0.1) 0%, rgba(100,100,100,0.4) 100%), url('images/background.jpg')">
-      <h1>Under construction</h1>
-      <p>For now, check out the <a href="https://www.facebook.com/candycowphotography" target="_blank">Facebook page</a></p>
+  <header>
+  <div id="stripes" style="height:600px;">
+    <span class="1"></span>
+    <span class="2"></span>
+    <span class="3"></span>
+    <span class="4"></span>
   </div>
+  <div class="container-fluid d-lg-flex align-items-center flex-row" id="intro">
+    <div class="p-3 mt-10">
+      <h1>I'm Joyce.</h1>
+      <p>I grew up in the United States (Texas to be exact - yee haw!). Having lived in Los Angeles and New York and spending many years in front of the camera, getting behind the lens was just a natural extension of my aesthetic hobbies. Now located in Switzerland, I enjoy collaborating with artists on this side of the world. Photography is one part technical thinking about lighting, angles, camera settings; one part creativity coming up with original concepts; and one part communication to effectively work together to realize the final vision.</p>
+      <p>Most of my portfolio comes from my travels and requests from friends and colleagues, but I also am open to making new acquaintances so get in touch today.</p>
+      <p>Aside from photography, I enjoy developing websites from code to content and finding hidden gems in the Swiss countryside with my family.</p>
+    </div>
+    <div >
+      <img src="images/JKAO_RGsmall.jpg" width="300" class="rounded mx-auto d-block m-3" alt="">
+      <p style="text-align:center;">Photo by Pierluigi Macor</p>
+    </div>
+  </div>
+</header>
 
   <div class="footer" id="photographyfoot">
     <div class="links">
@@ -59,9 +75,11 @@
       <a href="https://github.com/joyceykao"><i class="fab fa-fw fa-github"></i></a>
       <a href="https://twitter.com/joyceykao"><i class="fab fa-fw fa-twitter"></i></a>
       <a href="mailto:joyce@jykao.com?"><i class="fas fa-envelope"></i></a>
+<!--       <a class="btn-secondary" id="test-btn">More</a> -->
     </div>
       <p>Copyright 2021 by Joyce Y. Kao.</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
+
